# qemu-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resource/: resource.h  resource.rc
source/: qemu-control.cpp
